--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Gaming Landing Page Design</title>
 </head>
 <body>
-  
+  <header>
+    <!-- nav section starts -->
+    <nav class="nav-container">
+      <div class="logo">
+        <img src="images/Frame.png" alt="">
+        <h3><span>G</span>amer</h3>
+      </div>
+      <div class="menus">
+        <i class="fab-brands fa-tiktok"></i>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Developers</a></li>
+        <button>Follow Us On 
+          <div class="icon"><i class="fa fa-youtube-play" style="color:red"></i>
+            <i class="fa fa-facebook-f" style="color:rgb(11, 177, 243)"></i></div>
+        </button>
+      </div>
+    </nav>
+    <!-- banner starts -->
+    <div class="banner-container">
+      <div class="banner-content">
+        <h3 class="banner-semi-title">Play Like The</h3>
+        <h1 class="banner-title section-title-color">G.O.A.T.</h1>
+        <p class="section-list-title">1-Click instant play</p>
+        <p class="section-list-title">No Download</p>
+        <p class="section-list-title">1000s of supported online games</p>
+        <button class="primary-btn">Sign In</button>
+        <button class="button2">Go Rogue</button>
+      </div>
+      <div class="banner-image">
+        <img src="images/Group 18.png" alt="">
+      </div>
+    </div>
+    <!-- banner2 starts here -->
+    <div class="banner2-container">
+      <img src="images/pngwing 4.png" alt="">
+      <div class="banner2-content">
+        <h3 class="section-title title-color">We are gamer</h3>
+        <p class="section-details">
+          An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.          
+        </p>
+        <button class="primary-btn">know more</button>
+        <p class="section-details">Our purpose...</p>
+        <h4 class="banner2-purpose">“unleash the gamer in everyone”</h4>
+      </div>
+    </div>
+  </header>
+  <!-- main section starts -->
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
