play section commit

--- a/index.html
+++ b/index.html
@@ -59,7 +59,48 @@
   </header>
   <!-- main section starts -->
   <main>
-
+    <!-- video section starts -->
+    <section class="video-section">
+      <h3 class="section-title">
+        Online Games <span class="title-color">Funny Videos</span>
+      </h3>
+      <p class="section-details">A Collection of Hilarious Videos to Brighten Your Day</p>
+      <div class="video-items">
+        <figure>
+          <img src="images/Rectangle 4.png" alt="Image 1">
+          <figcaption>No Download. No Installs. Play games Instantly on Gamer.</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Rectangle 5.png" alt="Image 2">
+          <figcaption>Did you score? #unblockedgames #school</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Rectangle 7.png" alt="Image 3">
+          <figcaption>Breaking game records like OG</figcaption>
+        </figure>
+        <figure>
+          <img src="images/Rectangle 6.png" alt="Image 4">
+          <figcaption>Busted gaming on school laptop, but you are still lit.</figcaption>
+        </figure>
+      </div>
+    </section>
+    <!-- play section starts -->
+    <section class="play-container">
+      <div class="play-content">
+        <h3 class="section-title">
+          <span class="title-color">Play Instantly,</span>
+            No Downloads
+            No Installs.
+        </h3>
+        <p class="section-details">
+          Play games online for free without downloading. Just click the Play button and play instantly in your browser.
+        </p>
+      </div>
+      <div class="play-image">
+        <img  class="img1" src="images/Rectangle 55.png" alt="">
+        <img class="img2" src="images/Rectangle 66.png" alt="">
+      </div>
+    </section>
   </main>
   <footer>
 
