feature section added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,47 @@
       </div>
     </section>
   </main>
+  <!-- feature section starts -->
+  <section class="feature-section">
+    <div class="feature-container">
+      <div class="feature-list">
+        <img src="images/Rectangle 11.png" alt="">
+        <div class="feature-title">Action Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 12.png" alt="">
+        <div class="feature-title">Adventure Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 13.png" alt="">
+        <div class="feature-title">Arcade Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 14.png" alt="">
+        <div class="feature-title">Educational Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 15.png" alt="">
+        <div class="feature-title">Word Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 16.png" alt="">
+        <div class="feature-title">Role Palying Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 17.png" alt="">
+        <div class="feature-title">Music & Audio Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 18.png" alt="">
+        <div class="feature-title">Puzzle Games</div>
+      </div>
+      <div class="feature-list">
+        <img src="images/Rectangle 19.png" alt="">
+        <div class="feature-title">Strategy Games</div>
+      </div>
+    </div>
+  </section>
   <footer>
 
   </footer>
