--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <nav class="nav-container">
       <div class="logo">
         <img src="images/Frame.png" alt="">
-        <h3><span>G</span>amer</h3>
+        <h3><span class="title-color">G</span>amer</h3>
       </div>
       <div class="menus">
         <i class="fab-brands fa-tiktok"></i>
         <li><a href="">About Us</a></li>
         <li><a href="">Developers</a></li>
         <button>Follow Us On 
-          <div class="icon"><i class="fa fa-youtube-play" style="color:red"></i>
+          <div class="icon">
+            <i class="fa fa-youtube-play" style="color:red"></i>
             <i class="fa fa-facebook-f" style="color:rgb(11, 177, 243)"></i></div>
         </button>
       </div>
@@ -144,7 +145,37 @@
     </div>
   </section>
   <footer>
-
+      <div class="footer-logo">
+        <div class="logo">
+          <img src="images/Frame.png" alt="">
+          <h3><span class="title-color">G</span>amer</h3>
+        </div>
+      </div>
+      <ul>
+        <li>Our Story</li>
+        <li>Games</li>
+        <li>Web Games</li>
+        <li>Careers</li>
+        <li>Support</li>
+        <li>My Account</li>
+      </ul>
+      <div class="icons">
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-facebook-official"></i>
+        <i class="fa fa-youtube-play"></i>
+        <i class="fa fa-linkedin"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-apple"></i>
+      </div>
+      <ul class="rules">
+        <li>Terms and Conditions</li>
+        <li>Privacy Policy</li>
+        <li>Cookie Policy</li>
+        <li>Privacy Settings</li>
+      </ul>
+      <p class="section-details">
+        Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+      </p>
   </footer>
 </body>
 </html>
