footer section extra added

--- a/index.html
+++ b/index.html
@@ -144,14 +144,15 @@
       </div>
     </div>
   </section>
+  <!-- footer section starts -->
   <footer>
       <div class="footer-logo">
-        <div class="logo">
+        <div class="footer-logo-container">
           <img src="images/Frame.png" alt="">
           <h3><span class="title-color">G</span>amer</h3>
         </div>
       </div>
-      <ul>
+      <ul class="functionality">
         <li>Our Story</li>
         <li>Games</li>
         <li>Web Games</li>
@@ -160,12 +161,12 @@
         <li>My Account</li>
       </ul>
       <div class="icons">
-        <i class="fa fa-twitter"></i>
-        <i class="fa fa-facebook-official"></i>
-        <i class="fa fa-youtube-play"></i>
-        <i class="fa fa-linkedin"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-apple"></i>
+        <i class="fa fa-twitter" style="font-size: 40px; color: white;"></i>
+        <i class="fa fa-facebook-official" style="font-size: 40px; color: white; background-color: blue;"></i>
+        <i class="fa fa-youtube-play" style="font-size: 40px; color: red;"></i>
+        <i class="fa fa-linkedin" style="font-size: 40px; color: white;"></i>
+        <i class="fa fa-instagram" style="font-size: 40px; color: white;"></i>
+        <i class="fa fa-apple" style="font-size: 40px; color: white;"></i>
       </div>
       <ul class="rules">
         <li>Terms and Conditions</li>
