added responsive for laptop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Gaming Landing Page Design</title>
 </head>
 <body>
@@ -37,8 +39,10 @@
         <p class="section-list-title">1-Click instant play</p>
         <p class="section-list-title">No Download</p>
         <p class="section-list-title">1000s of supported online games</p>
-        <button class="primary-btn">Sign In</button>
-        <button class="button2">Go Rogue</button>
+        <div class="btn-groups">
+          <button class="primary-btn">Sign In</button>
+          <button class="button2">Go Rogue</button>
+        </div>
       </div>
       <div class="banner-image">
         <img src="images/Group 18.png" alt="">
@@ -68,19 +72,43 @@
       <p class="section-details">A Collection of Hilarious Videos to Brighten Your Day</p>
       <div class="video-items">
         <figure>
-          <img src="images/Rectangle 4.png" alt="Image 1">
+          <div class="image-wrapper">
+            <img src="images/Rectangle 4.png" alt="Image 1">
+            <div class="overlay">
+              <div class="play-button">&#9654;</div>
+              <p><span class="watch-now">Watch Now</span></p>
+            </div>
+          </div>
           <figcaption>No Download. No Installs. Play games Instantly on Gamer.</figcaption>
         </figure>
         <figure>
-          <img src="images/Rectangle 5.png" alt="Image 2">
+          <div class="image-wrapper">
+            <img src="images/Rectangle 5.png" alt="Image 1">
+            <div class="overlay">
+              <div class="play-button">&#9654;</div>
+              <p><span class="watch-now">Watch Now</span></p>
+            </div>
+          </div>
           <figcaption>Did you score? #unblockedgames #school</figcaption>
         </figure>
         <figure>
-          <img src="images/Rectangle 7.png" alt="Image 3">
+          <div class="image-wrapper">
+            <img src="images/Rectangle 7.png" alt="Image 1">
+            <div class="overlay">
+              <div class="play-button">&#9654;</div>
+              <p><span class="watch-now">Watch Now</span></p>
+            </div>
+          </div>
           <figcaption>Breaking game records like OG</figcaption>
         </figure>
         <figure>
-          <img src="images/Rectangle 6.png" alt="Image 4">
+          <div class="image-wrapper">
+            <img src="images/Rectangle 6.png" alt="Image 1">
+            <div class="overlay">
+              <div class="play-button">&#9654;</div>
+              <p><span class="watch-now">Watch Now</span></p>
+            </div>
+          </div>
           <figcaption>Busted gaming on school laptop, but you are still lit.</figcaption>
         </figure>
       </div>
