--- a/index.html
+++ b/index.html
@@ -174,37 +174,39 @@
   </section>
   <!-- footer section starts -->
   <footer>
-      <div class="footer-logo">
-        <div class="footer-logo-container">
-          <img src="images/Frame.png" alt="">
-          <h3><span class="title-color">G</span>amer</h3>
+      <div class="footer">
+        <div class="footer-logo">
+          <div class="footer-logo-container">
+            <img src="images/Frame.png" alt="">
+            <h3><span class="title-color">G</span>amer</h3>
+          </div>
         </div>
+        <ul class="functionality">
+          <li>Our Story</li>
+          <li>Games</li>
+          <li>Web Games</li>
+          <li>Careers</li>
+          <li>Support</li>
+          <li>My Account</li>
+        </ul>
+        <div class="icons">
+          <i class="fa fa-twitter" style="font-size: 40px; color: white;"></i>
+          <i class="fa fa-facebook-official" style="font-size: 40px; color: white; background-color: blue;"></i>
+          <i class="fa fa-youtube-play" style="font-size: 40px; color: red;"></i>
+          <i class="fa fa-linkedin" style="font-size: 40px; color: white;"></i>
+          <i class="fa fa-instagram" style="font-size: 40px; color: white;"></i>
+          <i class="fa fa-apple" style="font-size: 40px; color: white;"></i>
+        </div>
+        <ul class="rules">
+          <li>Terms and Conditions</li>
+          <li>Privacy Policy</li>
+          <li>Cookie Policy</li>
+          <li>Privacy Settings</li>
+        </ul>
+        <p class="section-details">
+          Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </p>
       </div>
-      <ul class="functionality">
-        <li>Our Story</li>
-        <li>Games</li>
-        <li>Web Games</li>
-        <li>Careers</li>
-        <li>Support</li>
-        <li>My Account</li>
-      </ul>
-      <div class="icons">
-        <i class="fa fa-twitter" style="font-size: 40px; color: white;"></i>
-        <i class="fa fa-facebook-official" style="font-size: 40px; color: white; background-color: blue;"></i>
-        <i class="fa fa-youtube-play" style="font-size: 40px; color: red;"></i>
-        <i class="fa fa-linkedin" style="font-size: 40px; color: white;"></i>
-        <i class="fa fa-instagram" style="font-size: 40px; color: white;"></i>
-        <i class="fa fa-apple" style="font-size: 40px; color: white;"></i>
-      </div>
-      <ul class="rules">
-        <li>Terms and Conditions</li>
-        <li>Privacy Policy</li>
-        <li>Cookie Policy</li>
-        <li>Privacy Settings</li>
-      </ul>
-      <p class="section-details">
-        Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
-      </p>
   </footer>
 </body>
 </html>
